force-app/main/default/objects/Purchased_Item__c/Purchased_Item__c.object-meta.xml
<CustomObject>
    <label>Purchased Item</label>
    <nameField>
        <label>Purchased Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchased Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>