force-app/main/default/objects/Purchased_Item__c/fields/HistoricalTransaction__c.field-meta.xml
<CustomField>
    <fullName>HistoricalTransaction__c</fullName>
    <label>Historical Transaction</label>
    <referenceTo>Historical_transaction__c</referenceTo>
    <relationshipLabel>Purchased Items</relationshipLabel>
    <relationshipName>Purchased_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>