force-app/main/default/objects/Purchased_Item__c/fields/Manual_Service_Period__c.field-meta.xml
<CustomField>
    <fullName>Manual_Service_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates that the services period of this service product is changed by an agent/operator and does not need to follow the usual rules of service periods.</description>
    <inlineHelpText>This field indicates that the services period of this service product is changed by an agent/operator and does not need to follow the usual rules of service periods.</inlineHelpText>
    <label>manual service period</label>
    <type>Checkbox</type>
</CustomField>