force-app/main/default/objects/Purchased_Item__c/fields/NetSuiteId__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteId__c</fullName>
    <externalId>true</externalId>
    <label>NetSuiteId</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>