force-app/main/default/objects/Purchased_Item__c/fields/serial_number__c.field-meta.xml
<CustomField>
    <fullName>serial_number__c</fullName>
    <label>serial number</label>
    <type>TextArea</type>
</CustomField>