force-app/main/default/objects/Purchased_Item__c/fields/Service_For_One_Unit__c.field-meta.xml
<CustomField>
    <fullName>Service_For_One_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a field, which tells you, if the quantity of the service counts for just one unit(iPad / devices) or not</description>
    <inlineHelpText>This is a field, which tells you, if the quantity of the service counts for just one unit(iPad / devices) or not.</inlineHelpText>
    <label>Service for one unit</label>
    <type>Checkbox</type>
</CustomField>