force-app/main/default/objects/Purchased_Item__c/fields/tax_rate__c.field-meta.xml
<CustomField>
    <fullName>tax_rate__c</fullName>
    <label>tax rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>